# pret_a_depenser

./: .coverage  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  retrain_quick.py
.github/workflows/: cd.yaml
api/: main.py  schemas.py
api/model_files/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json
api/production_logs/: api_request_log.jsonl  prediction_log.jsonl
dashboard/: app.py
monitoring/: collect_logs.py  drift_analysis.py  prepare_reference.py
monitoring/reports/: drift_metrics.json
notebooks/: 01_exploration_donnees.ipynb  02_MLflow_Basic_Tracking.ipynb  03_Model_Comparison_and_CV.ipynb  04_Hyperparameter_Tuning_and_Threshold_Optimization.ipynb  05_drift_analysis.ipynb  features_list.json
reports/: monitoring_report_complete.html
src/: analyse.py  modeling.py  preprocess.py  utils.py
tests/: test_api.py
