[project]
name = "pret-a-depenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.8.1",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "missingno>=0.5.2",
    "mlflow>=3.4.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[tool.setuptools]
packages = ["src"]
